--- a/mysite03/pom.xml
+++ b/mysite03/pom.xml
@@ -71,11 +71,24 @@
 			<version>2.4.4</version>
 		</dependency>
 
-		<!-- Common DBCP (Connection Pool)-->
+		<!-- Common DBCP (Connection Pool) -->
 		<dependency>
 			<groupId>commons-dbcp</groupId>
 			<artifactId>commons-dbcp</artifactId>
 			<version>1.4</version>
+		</dependency>
+		
+		<!-- MyBatis -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.2.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis-spring</artifactId>
+			<version>1.2.0</version>
 		</dependency>
 
 		<!-- logback(slf4j) -->
@@ -103,6 +116,7 @@
 			<version>2.0</version>
 			<scope>provided</scope>
 		</dependency>
+
 	</dependencies>
 
 	<build>
