--- a/mysite03/pom.xml
+++ b/mysite03/pom.xml
@@ -85,6 +85,14 @@
 			<version>1.4</version>
 		</dependency>
 
+		<!-- jackson -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.9.8</version>
+		</dependency>
+
+
 		<!-- Common DBCP (Connection Pool) -->
 		<dependency>
 			<groupId>commons-dbcp</groupId>
