initializer 적용 (war 배포)

--- a/mysite06/src/main/resources/__application.properties
+++ b/mysite06/src/main/resources/__application.properties
@@ -1,10 +1,10 @@
+
 # server
 server.port=8080
-server.sevlet.context-path=/mysite06
+server.servlet.context-path=/mysite06
 
 # devtools
 spring.devtools.livereload.enabled=true
-
 
 # spring mvc
 spring.mvc.view.prefix=/WEB-INF/views/
